# noteGit

./: .gitignore  .gitmodules  osInit.sh  sysInit.sh
diff/: a.out  diff.cpp
examInspur/: b编程样例说明.doc  j集团2013软件研发试题.docx
exam_inspur/: j集团研发岗位（编程）考试注意事项.docx
exp/: ssh_publickey.exp
git/: dirGit.sh  gitconfig  readme.txt
gnu/cmake/: CMakeLists.txt  foo.h.cmake  main.c  readme.txt  run.sh
golang/: .gitignore  Makefile
host/: hosts201508271.txt
httpd/: test.2
kvm/: empty.img  fw24-boxes.xml  fw24-kernDebug.xml  fw24-spice.xml  fw24-winxp.xml  fw24.xml  isoMK.sh  r6.xml  start.sh  vmStart.sh
makefile/: exp_Makefile
ncurse/: readme.txt
net/: ipAddr.py  mwanInit.sh  ss.sh
perl/: tail.pl  test.pl
python/: a.out  arg.py  chk_info.txt  cmdArgs.py  collections.py  dir.py  encoding.py  endin.py  eval.py  func.py  hexdump.py  jsonTest.py  maxbits.py  queue.py  regex.py  son.py  sort.py  tryExcept.py  type.py  unbooted.py
qr/: crlf.txt  gen.sh  qr.py  readme
raid/: raid_test.sh
robot/: readme.txt
rowanlib/: errptr.h
rpm/: dbInfo.py  dbQuery.py  pkgInf.py  yumReop.py
rust/: .gitignore
sed/: password-auth
shell/: L1.sh  L2.sh  L3.sh  L4.sh  arrary.sh  case.sh  debug.sh  envRun.sh  exec.sh  fgbg.sh  fileline.sh  for.sh  func.sh  groupCmd.sh  herePython.sh  hilight.sh  ifs.sh  interpret.sh  job.sh  lineAdj.sh  misc.sh  new.sh  read.sh  readme.txt  ssh_pwd.exp  string.sh
svn/: servers
swatch/: swatch-3.2.3-7.el6.noarch.rpm  swatch-3.2.3-7.el6.src.rpm
synergy/: readme.txt  synergy_p.spec  synergys
syscall/: a.out  main.c  syscall_getpid
(+1795 files in other folders)
